<resources>
    <string name="app_name">FamiliasIn</string>
    <string name="errorInternet">Internet connection not Available</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="errorEmail">Please enter email</string>
    <string name="errorValidEmail">Please enter valid email</string>
    <string name="errorConfEmail">Please confirm email</string>
    <string name="errorValidPassword">Please enter password</string>
    <string name="work_in_progress">WORK IN PROGRESS</string>
    <string name="errorFirstName">Please enter First Name</string>
    <string name="errorLastName">Please enter Last Name </string>
    <string name="errorEnterConfPass">Please enter confirm password</string>
    <string name="errorConfirmPassword">Password not match</string>
    <string name="errorAddress">Please enter your Address</string>
    <string name="errorGender"> Please select Sex</string>
    <string name="errorRelationship">Please select relationship with child</string>
    <string name="errorIdentification">Please enter Identification card no.</string>
    <string name="errorStudentAddress">Please confirm student address </string>
    <string name="errorLevelOfEducation">Please select level of education</string>
    <string name="errorNoOfSchools">Please select No. of Student in FamiliasIn schools</string>
    <string name="errorChild">Child Should be one or Greater than one</string>
    <string name="errorBirthday">Please enter date of birth of your child</string>
    <string name="errorSchool">Please enter School of your child</string>
    <string name="errorTeacher">Please enter teacher of your child</string>
    <string name="errorChildFirstName">Please enter first name of your child</string>
    <string name="errorChildLastName">Please enter last name of your child</string>
    <string name="errorChildGender">Please enter sex of your child</string>
    <string name="errorChildIdentification">Please enter Identification card no. of your child</string>
    <string name="errorPhone">Please enter phone number</string>
    <string name="errorOrganization">Please enter organization</string>
    <string name="errorTitle">Please enter title</string>
    <string name="select_gender">SELECT SEX</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="other">OTHER</string>
    <string name="select_relation">SELECT RELATION</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="guardian">Tutor</string>
    <string name="other_rel">Other</string>
    <string name="select_school">SELECT SCHOOL</string>
    <string name="select_teacher">SELECT TEACHER</string>
    <string name="registered_successfully">Registered Successfully</string>
    <string name="select_no_of_student">SELECT NO. OF STUDENTS</string>
    <string name="less50">less than 50</string>
    <string name="less100">less than 100</string>
    <string name="less150">less than 150</string>
    <string name="more150">more than 150</string>
    <string name="select_level_of_education">SELECT LEVEL OF EDUCATION</string>
    <string name="Primaria">Primary</string>
    <string name="Masters">Teachers</string>
    <string name="Secundaria">High school</string>
    <string name="No_formal">Not formal</string>
    <string name="Terciaria_no_universitaria">Tertiary non-university</string>
    <string name="Terciaria_universitaria">University Tertiary</string>
    <string name="Postgrado">Postgraduate</string>
    <string name="BIENVENIDO">WELCOME</string>
    <string name="Un_programa_del_Ministro_de_Educación_y_Cultura_de_Uruguay">A program of the Minister of Education and \nCulture of Uruguay</string>
    <string name="Selecciona_una_opción">Select an option</string>
    <string name="Padre_o_tutor">Parent or tutor</string>
    <string name="Maestro">Teacher</string>
    <string name="Supervisor">Supervisor</string>
    <string name="Acerca_de_FamiliasIn">About FamiliasIn</string>
    <string name="Inicia_Sesión">Log in</string>
    <string name="Bienvenido_Padre_o_tutor">Welcome Parent or Guardian</string>
    <string name="Ingresa_tu_usuario_y_contraseña_para_acceder_a_tu_cuenta">Enter your email and password to access your account</string>
    <string name="Contraseña">Password</string>
    <string name="email">Email</string>
    <string name="iniciar_sesion">LOG IN</string>
    <string name="o_si_eres_nuevo_en_el_el_programa_podras_crear_una_nueva_cuenta_aqu">Or if you are new to the program, you can create a new account here</string>
    <string name="crear_cuenta">CREATE ACCOUNT</string>
    <string name="Nueva_Cuenta">New account</string>
    <string name="Info_del_padre_o_tutor">Parent or guardian info</string>
    <string name="Ingresa_tu_información_básica_para_crear_tu_nueva_cuenta">Enter your basic information to \ncreate your new account</string>
    <string name="primer_nombre">First Name</string>
    <string name="Apellido">Last Name</string>
    <string name="Dirección">Address</string>
    <string name="Género">Sex</string>
    <string name="Relación_con_el_niño">Relationship with the child</string>
    <string name="Cédula">Identification number</string>
    <string name="Es_esta_la_misma_dirección_que_el_estudiante">Is this the same address as the student?</string>
    <string name="Si">Yes</string>
    <string name="No">No</string>
    <string name="Nivel_de_educación_alcanzado">Level of education achieved</string>
    <string name="No_de_estudiantes_en_escuelas_FamiliasIn">No. of students in FamiliasIn schools</string>
    <string name="Siguiente">FOLLOWING</string>
    <string name="informaci_n_del_estudiante">Student information</string>
    <string name="ingresa_la_informaci_n_b_sica_del_ni_o_a_para_poder_continua">Enter the child\'s basic information to continue</string>
    <string name="agregar_hijo_a">Add child</string>
    <string name="escuela">School</string>
    <string name="fecha_nacimiento">Birth date</string>
    <string name="nino">Child</string>
    <string name="Acerca">About</string>
    <string name="Familiasin">FAMILIASIN</string>
    <string name="Familiasin_small">Familias In</string>
    <string name="aboutSmallText">It is a mobile application that was created in \ncollaboration with the Ministry of \nEducation and Culture and the Inter-\nAmerican Development Bank.</string>
    <string name="aboutTextWithEmail">If you have any questions or comments \nplease write to info@parentin.com and we \nwill respond as soon as possible</string>
    <string name="Información_del_Maestro">Teacher Information</string>
    <string name="Rodrigo">Rodrigo</string>
    <string name="Baez">Baez</string>
    <string name="Numero_de_Estudiantes">Number of students</string>
    <string name="Correo_Electrónico">Email</string>
    <string name="Confirma_el_correo_electrónico">Confirm Email</string>
    <string name="Confirmar_contraseña">Confirm Password</string>
    <string name="Crear_cuenta">CREATE ACCOUNT</string>
    <string name="children">Children</string>
    <string name="Mensajes">Messages</string>
    <string name="escribir_nuevo_mensaje">WRITE NEW MESSAGE</string>
    <string name="Clase">Class</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="parentin_matriculados">ParentIn Enrolled:</string>
    <string name="encuestas_terminadas">Surveys Completed:</string>
    <string name="informaci_n_de_la_clase">Class Information</string>
    <string name="exportar_lista_de_alumnos">Export student list</string>
    <string name="a_adir_alumno_manualmente">Add student manually</string>
    <string name="estudiante">student</string>
    <string name="fec_nac">Fec. No.</string>
    <string name="padre">Father</string>
    <string name="encuesta">Survey</string>
    <string name="escribir_mensaje_al_tutor">Write message to the tutor</string>
    <string name="done">DONE</string>
    <string name="update_child_information">Update child Information</string>
    <string name="update_your_child_s_basic_information">Update your child\'s basic Information</string>
    <string name="add_child_information">Add child information</string>
    <string name="add_your_child_s_basic_information">Add your child\'s basic information</string>
    <string name="phone_number">Phone Number</string>
    <string name="parent_information">Parent Information</string>
    <string name="add_student_manually">Add Student Manually</string>
    <string name="Añadir_Alumno">Add Student</string>
    <string name="cuestionario">Cuestionario</string>
    <string name="de">of</string>
    <string name="gracias_por_comenzar_la_encuesta">Thank you for starting the survey.</string>
    <string name="la_encuesta_s_lo_te_tomar_5_minutos_y_su_opini_n_es_extremadamente_importante_para_nosotros">The survey will only take you 5 minutes and your opinion is extremely important to us.</string>
    <string name="escuela_seleccionado">Selected School</string>
    <string name="recuerda_que_puedes_cambiar_la_escuela_en_la_lista_de_abajo">Remember that you can change the school in the list below</string>
    <string name="seleccione_escuela">Select school</string>
    <string name="comenzar_cuestionario">START QUESTIONNAIRE</string>
    <string name="comenzar_encuesta">START SURVEY</string>
    <string name="please_answer_this_question">Please answer this question first</string>
    <string name="select_answer">SELECT ANSWER</string>
    <string name="se_guardar_un_archivo_con_la_informaci_n_de_los_alumnos_en_csv">A file will be saved with the \ninformation of the students in CSV</string>
    <string name="cancelar">Cancel</string>
    <string name="exportar">To export</string>
    <string name="exportar_lista_como_csv">Export List as CSV</string>
    <string name="responder">Reply</string>
    <string name="eliminar_mensaje">Delete message</string>
    <string name="nuevo_mensaje">New message</string>
    <string name="enviar">Submit</string>
    <string name="para">For:</string>
    <string name="mensaje">Message:</string>
    <string name="mensaje_va_ir_aqu">Message will go here.</string>
    <string name="adjuntar_archivo">Attach file</string>
    <string name="mensajes">Messages</string>
    <string name="escribe_un_nuevo_mensaje_aqu">Write a new message here….</string>
    <string name="in">In</string>
    <string name="familias">Familias</string>
    <string name="olvidaste_la_contrase_a">Forgot password?</string>
    <string name="a_n_no_tienes_cuenta">You don\'t have an account yet?</string>
    <string name="registrate_aqu">sign up here</string>
    <string name="nueva_cuenta">New account</string>
    <string name="informaci_n_del_supervisor">Supervisor Information</string>
    <string name="ingresa_tu_informaci_n_b_sica_para_crear_tu_nueva_cuenta">Enter your basic information to \ncreate your new account</string>
    <string name="organizaci_n">Organization</string>
    <string name="correo_electr_nico">Email</string>
    <string name="confirma_el_correo_electr_nico">Confirm Email</string>
    <string name="permiso">Are you interested in viewing the data or do you want to request permission to send messages to users?</string>
    <string name="desea_solicitar_permiso_para_enviar_nuevas_encuestas_a_usuarios">Do you want to request permission to send new user surveys?</string>
    <string name="t_tulo">Title</string>
    <string name="ajustes">Settings</string>
    <string name="aqu_puedes_ver_la_informacion_o_editarla_cerrar_o_eliminar_la_sesi_n">Here you can see the information or edit it, \nclose or delete the session.</string>
    <string name="selecciona_una_opci_n">Select an option</string>
    <string name="informacion_del_maestro">Teacher Information</string>
    <string name="ayuda_y_soporte">Help and Support</string>
    <string name="cerrar_sesi_n">Sign off</string>
</resources>