<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:animateLayoutChanges="true"
	android:padding="@dimen/_10sdp"
	android:paddingStart="@dimen/_10sdp"
	android:paddingEnd="@dimen/_10sdp">

	<LinearLayout
		android:layout_width="match_parent"
		android:gravity="center_vertical"
		android:layout_height="wrap_content">

		<com.sdei.parentIn.customViews.SemiBoldTextView
			android:id="@+id/txtTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:padding="@dimen/_5sdp"
			android:text="@string/nino"
			android:textColor="@color/colorPrimary"
			android:textSize="@dimen/_14ssp" />

		<ImageView
			android:id="@+id/imgDelete"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:foreground="?selectableItemBackground"
			android:padding="@dimen/_5sdp"
			android:src="@mipmap/ic_delete" />

	</LinearLayout>

	<EditText
		android:id="@+id/edtChildFirstName"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:layout_marginTop="@dimen/_10sdp"
		android:background="@drawable/edit_text_selector"
		android:drawablePadding="@dimen/_5sdp"
		android:hint="@string/primer_nombre"
		android:padding="@dimen/_12sdp"
		android:textSize="@dimen/_12ssp" />

	<EditText
		android:id="@+id/edtChildLastName"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:layout_marginTop="@dimen/_12sdp"
		android:background="@drawable/edit_text_selector"
		android:drawablePadding="@dimen/_10sdp"
		android:padding="@dimen/_12sdp"
		android:hint="@string/Apellido"
		android:textSize="@dimen/_12ssp" />

	<EditText
		android:id="@+id/edtChildIdentityCard"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:layout_marginTop="@dimen/_12sdp"
		android:background="@drawable/edit_text_selector"
		android:drawablePadding="@dimen/_10sdp"
		android:padding="@dimen/_12sdp"
		android:hint="@string/Cédula"
		android:textSize="@dimen/_12ssp" />


	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/_12sdp"
		android:orientation="horizontal">

		<EditText
			android:id="@+id/edtChildGender"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_marginEnd="@dimen/_5sdp"
			android:layout_weight="1"
			android:drawableRight="@mipmap/drop_down"
			android:background="@drawable/edit_text_selector"
			android:drawablePadding="@dimen/_10sdp"
			android:padding="@dimen/_12sdp"
			android:hint="@string/Género"
			android:inputType="none"
			android:focusable="false"
			android:cursorVisible="false"
			android:textSize="@dimen/_12ssp" />

		<EditText
			android:id="@+id/edtChildBirthDate"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_marginStart="@dimen/_5sdp"
			android:layout_weight="1"
			android:drawableRight="@mipmap/drop_down"
			android:background="@drawable/edit_text_selector"
			android:drawablePadding="@dimen/_10sdp"
			android:padding="@dimen/_12sdp"
			android:hint="@string/fecha_nacimiento"
			android:inputType="none"
			android:focusable="false"
			android:cursorVisible="false"
			android:textSize="@dimen/_12ssp" />

	</LinearLayout>

	<EditText
		android:id="@+id/edtChildSchool"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:layout_marginTop="@dimen/_12sdp"
		android:background="@drawable/edit_text_selector"
		android:drawablePadding="@dimen/_10sdp"
		android:padding="@dimen/_12sdp"
		android:drawableRight="@mipmap/drop_down"
		android:hint="@string/escuela"
		android:inputType="none"
		android:focusable="false"
		android:cursorVisible="false"
		android:textSize="@dimen/_12ssp" />

	<EditText
		android:id="@+id/edtChildTeacher"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:layout_marginTop="@dimen/_12sdp"
		android:background="@drawable/edit_text_selector"
		android:drawablePadding="@dimen/_10sdp"
		android:padding="@dimen/_12sdp"
		android:drawableRight="@mipmap/drop_down"
		android:hint="@string/Maestro"
		android:inputType="none"
		android:focusable="false"
		android:cursorVisible="false"
		android:textSize="@dimen/_12ssp" />

</LinearLayout>