<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center_horizontal"
	android:orientation="vertical">



	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="@dimen/_60sdp"
		android:src="@mipmap/logo" />

	<com.sdei.parentIn.customViews.HeavyTextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/app_name"
		android:textColor="@color/black"
		android:textSize="@dimen/_32ssp" />

	<com.sdei.parentIn.customViews.SemiBoldTextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/_23sdp"
		android:text="@string/BIENVENIDO"
		android:textColor="@color/colorPrimary"
		android:textSize="@dimen/_16ssp" />

	<com.sdei.parentIn.customViews.RegularTextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/_15sdp"
		android:layout_marginTop="@dimen/_8sdp"
		android:layout_marginEnd="@dimen/_15sdp"
		android:gravity="center"
		android:text="@string/Un_programa_del_Ministro_de_Educación_y_Cultura_de_Uruguay"
		android:textColor="@color/black"
		android:textSize="@dimen/_13ssp" />

	<com.sdei.parentIn.customViews.SemiBoldTextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/_61sdp"
		android:layout_marginBottom="@dimen/_6sdp"
		android:gravity="center"
		android:text="@string/Selecciona_una_opción"
		android:textColor="@color/black"
		android:textSize="@dimen/_15ssp" />

	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/_15sdp"
		android:layout_marginStart="@dimen/_15sdp"
		android:layout_marginEnd="@dimen/_15sdp"
		android:background="@drawable/edit_text_selector" />

</LinearLayout>